# continual-pre-training-rslora

./: .gitignore  install.sh  pyproject.toml  requirements.txt  script.sh
scriprts/: requirements.txt  run_cpo.sh
scripts/: deep_speed_config.yaml  install_alma.sh  requirements.txt  run_cpo.sh  run_sft.sh  run_training.sh
src/: cpo_trainer.py  data_preprocess.py  llama-70b-test.py  preprocess_func.py  prompt_template.py  run_training.py  test.py  train_modules.py  train_translation.py  trainer_cpo.py  trainer_sft.py  training_modules.py  translation_template.py  utils.py
src/ipynbs/: Untitled.ipynb  Untitled1.ipynb  data_preprocessing.ipynb  inference.ipynb  sentence_alignment_long_text_request.ipynb  tmt_trainig_dataset_10k.ipynb
src/ipynbs/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  inference-checkpoint.ipynb  sentence_alignment_infer-checkpoint.ipynb  sentence_alignment_long_text_request-checkpoint.ipynb  tmt_trainig_dataset_10k-checkpoint.ipynb
temp_data/: all_20240329_v2.csv
