[tool.poetry]
name = "modeling"
version = "0.1.0"
description = ""
authors = ["JH-lee95 <skdltmwkd12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
transformers = "^4.39.0"
datasets = "^2.18.0"
packaging = "<24.0"
bitsandbytes = "^0.43.0"
trl = "^0.8.1"
pandas = "^2.2.1"
peft = "^0.10.0"
accelerate = "^0.28.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
sentencepiece = "^0.2.0"
openpyxl = "^3.1.2"
ipdb = "^0.13.13"
ninja = "^1.11.1.1"
mlflow = "^2.11.3"
prettytable = "^3.10.0"
nltk = "^3.8.1"
jsonlines = "^4.0.0"
kiwipiepy = "^0.17.0"
galore-torch = "^1.0"
wheel = "^0.43.0"
setuptools = "^69.2.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
