[tool.poetry]
name = "cpt"
version = "0.1.0"
description = "lm continual pretraining"
authors = ["JH-lee95"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.1"
transformers = "^4.41.2"
pandas = "^2.2.2"
jupyter = "^1.0.0"
datasets = "^2.19.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
